--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/res/values/strings.xml
@@ -31,6 +31,11 @@
         <item>@string/direction_decrementing</item>
     </string-array>
 
+    <string name="configure_esp_info">
+        Here you can connect to your ESP32 via bluetooth and configure its WiFi connection so that it can work with HolzTools.
+        You must choose which WLAN you want to use and set its password.
+    </string>
+
     <string name="license_apache" tools:ignore="TypographyOther">
                                  Apache License\n
                            Version 2.0, January 2004\n
